--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "test:e2e": "dotenv -e .env.test -- jest --watch --no-cache --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.7.1",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.1",
@@ -42,12 +43,16 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "nanoid": "^4.0.0",
+    "nodemailer": "^6.7.6",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
+    "pug": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.4.0",
+    "uuid": "^8.3.2",
     "webpack": "^5.73.0"
   },
   "devDependencies": {
